react/src/style.css
/* ... */
@media (min-width: 1024px) and (max-width: 1193px) {
    .note {
        height: 384px;
    }
    .box_new1 {
        margin: 0 84px 0 calc(50vw - 423px);
    }
    .box_new3 {
        margin-right: calc(50vw - 376px);
    }
    .box_new3 {
        display: block;
    }
    .s4_5 {
        font-size: 16px;
        text-align: left;
        line-height: 1.88;
    }
}
@media (min-width: 1194px) {
    .note {
        height: 384px;
    }
    .box_new3 {
        display: block;
    }
    .box_new1 {
        margin: 0 84px 0 174px;
    }
    .s4_5 {
        font-size: 16px;
        line-height: 1.88;
        text-align: left;
    }
}


/*Third_row column*/

.third {
    height: 606px;
    padding: 100px 0px;
    object-fit: contain;
    /*background-image: url("../images/mask_size.png");
    background-repeat: no-repeat;*/
    background-image: linear-gradient(to right, #ffe8dc, rgba(255, 243, 202, 0.47), #d9f3ff);
}
.third_row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.title{
    height: 36px;
    margin: 0 0 8px 0;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 24px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.5;
    letter-spacing: -1px;
    text-align: center;
    color: #562a2a;
}
.subtitle {
    width: 236px;
    height: 22px;
    margin: 0;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 15px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: center;
    color: #736f66;
}
.third_images {

}
.third_img {
    margin: 24px 8px 0 8px;
    width: 220px;
    height: 440px;
    object-fit: fill;
}
.third_space_end {
    width: 33px;
}
.center {
    text-align: center;
}
.hide {
    display: none;
}
@media (max-width: 1023px) {
    .third_row {
        display: none;
    }
    .third {
        padding: 80px 0;
    }
    .subtitle {
        margin-left: calc(50vw - 118px);
    }
}
@media (min-width: 1024px) {
    .slideshow-container {
        display: none;
    }
    .dots {
        display: none;
    }
    .third {
        height: 552px;
    }
    .third_space {

    }
}
@media (min-width: 1440px) {
    .third_space {
        width: 86px;
    }
    .third_row {
        justify-content: center;
    }
    .third_space_end {
        width: calc(50vw - 701px);
    }
    .hide {
        display: inline;
    }
}

/* fourth section */

.fourth {
    height: 884px;
    padding: 97px 0 95px 0;
}
.cont_column{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.fourth_heading {
    width: 300px;
    height: 36px;
    margin: 0;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 30px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.2;
    letter-spacing: -1px;
    text-align: center;
    color: #562a2a;
}
.fourth_subheading {
    width: calc(100vw - 40px);
    height: 20px;
    margin: 0;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 14px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: center;
    color: #736f66;
}
.Rectangle-295 {
    width: calc(100vw - 40px);
    height: 498px;
    margin: 25px 0 80px;
    padding: 25px 0 30px;

    border-radius: 16px;
    box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
    border: solid 1px #562a2a;
    background-color: #fff;
}
.google {
    width: 135px;
    height: 40px;
    flex-grow: 0;
    margin: 0 8px 0 0;
    object-fit: contain;
}
.app {
    width: 135px;
    height: 40px;
    flex-grow: 0;
    margin: 0;
    object-fit: contain;
}
.footer {
    width: 342px;
    height: 24px;
    margin: 0;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 12px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.71;
    letter-spacing: normal;
    text-align: center;
    color: #212121;
}
.fourth_cont_row {
    display: flex;
    justify-content: center;
    align-items: center;
}
.writer_name {
    width: 56px;
    height: 30px;
    margin: 4px 11px 26px 24px;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 15px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 2;
    letter-spacing: normal;
    text-align: right;
    color: #000;
}
.writer_email {
    width: 45px;
    height: 30px;
    margin: 24px 11px 26px 24px;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 15px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 2;
    letter-spacing: normal;
    text-align: right;
    color: #000;
}
.fourth_input {
    width: calc(100vw - 80px); /*657*/
    height: 36px;
    /*gap: 10px;*/
    margin: 0 0 12px 23px;
    /*padding: 10px 10px 8px 10px;*/
    border-radius: 4px;
    border: solid 1px #cecccb;
}
.form_content {
    width: 28px;
    height: 30px;
    margin: 12px 11px 0 24px;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 15px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 2;
    letter-spacing: normal;
    text-align: right;
    color: #000;
}
.fourth_textarea {
    width: calc(100vw - 80px); /*657*/
    height: 240px;
    /*gap: 10px;*/
    margin: 0 0 0 23px;
    /*padding: 10px 10px 8px 10px;*/
    border-radius: 4px;
    border: solid 1px #cecccb;
    vertical-align: middle;
}
.Rectangle-19 {
    width: 120px;
    height: 40px;
    margin: 30px 0 0 calc(50vw - 80px);
    padding: 9px 32px 9px 32px;
    border-radius: 4px;
    background-color: #562a2a;
}
.form_done {
    width: 56px;
    height: 22px;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 15px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: left;
    color: #fff;
}
/* ... */

